--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,5 @@
 :root {
+  --gradientPrimary: linear-gradient(to right, #0250c5 0%, #d43f8d 100%);
   --bgPrimary: #2b2b2b;
   --bgSecondary: #323340;
 
